--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.0.1",
+    "dayjs": "^1.11.6",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
