--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "format:fix": "prettier --write --ignore-path .gitignore ./src"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-tabs": "^1.0.1",
+    "country-calling-code": "^0.0.3",
     "dayjs": "^1.11.6",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-hook-form": "^7.38.0",
+    "react-icons": "^4.6.0",
+    "tailwindcss-radix": "^2.6.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
