feat: add auth screen - ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["src/components/*"],
+      "@/modules/*": ["src/modules/*"],
       "@/pages/*": ["src/pages/*"],
       "@/utils/*": ["src/utils/*"]
     }
