--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "demo:yarn-dev": "concurrently --kill-others \"yarn run dev\" \"yarn run proxy\"",
+    "demo:yarn-start": "concurrently --kill-others \"yarn run start\" \"yarn run proxy\"",
     "lint": "next lint",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -37,6 +39,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "concurrently": "^7.5.0",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
