--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "demo:yarn-dev": "concurrently --kill-others \"yarn run dev\" \"yarn run proxy\"",
-    "demo:yarn-start": "concurrently --kill-others \"yarn run start\" \"yarn run proxy\"",
+    "demo:dev": "concurrently --kill-others \"yarn run dev\" \"yarn run proxy\"",
+    "demo:start": "concurrently --kill-others \"yarn run start\" \"yarn run proxy\"",
     "lint": "next lint",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -25,6 +25,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
